--- a/style.css
+++ b/style.css
@@ -5,8 +5,35 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
+:root {
+  __font-primary: "Baloo Da 2", serif;
+  __font-secundary: "Josefin Slab", serif;
+  __font-action: "Mulish", serif;
+}
+
+.hanburguer {
+  width: 2rem;
+  height: 1.5rem;
+  position: fixed;
+  z-index: 100;
+  right: 2rem;
+  top: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.line {
+  width: 100%;
+  height: 0.1rem;
+  background-color: #ffffff;
+  box-shadow: 0.1rem 0.1rem 1px #000;
+}
 header {
   width: 100%;
   height: 100vh;
@@ -47,7 +74,7 @@ header {
 .banner h1 {
   color: #ffffff;
   font-size: 3.5rem;
-  font-family: "Baloo Da 2", serif;
+  font-family: var(__font-primary);
   font-weight: 200;
   text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.4);
   line-height: 3.5rem;
@@ -57,9 +84,10 @@ header {
 }
 
 .banner p {
-  font-family: "Josefin Slab", serif;
+  font-family: var(__font-secundary);
   color: #ffffff;
   font-size: 2rem;
+  font-weight: bolder;
   text-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0.4);
   margin-bottom: 2rem;
   opacity: 0;
@@ -67,9 +95,10 @@ header {
 }
 
 .banner button {
-  font-family: "Mulish", serif;
+  font-family: var(__font-action);
   color: #ffffff;
   text-transform: uppercase;
+  font-weight: bolder;
   letter-spacing: 0.1rem;
   background-color: #6a3093; /* fallback for old browsers */
   background: -webkit-linear-gradient(
@@ -90,7 +119,19 @@ header {
   animation: moveBanner 1s 0.9s forwards;
 }
 .banner button:hover {
-  opacity: 0.8;
+  background: #59c173; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #5d26c1,
+    #a17fe0,
+    #59c173
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #5d26c1,
+    #a17fe0,
+    #59c173
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 @keyframes moveBanner {
@@ -102,4 +143,60 @@ header {
     transform: translateY(0rem) rotateY(0);
     opacity: 1;
   }
+}
+
+.sidebar {
+  width: 20rem;
+  height: 100vh;
+  background-color: #ffffff;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu-item {
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+.menu-link {
+  font-family: var(__font-action);
+  font-size: 2rem;
+  color: #555;
+  transition: color 1s;
+}
+
+.menu-link:hover {
+  color: #6a3093;
+}
+
+.social-midia {
+  background-color: #6a3093;
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  border-radius: 2%;
+}
+
+.social-midia i {
+  color: #fff;
+  height: 2.5rem;
+  width: 2.5rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.social-midia i:hover {
+  color: #b98ed8;
 }
