--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   __font-action: "Mulish", serif;
 }
 
-.hanburguer {
+.hamburguer {
   width: 2rem;
   height: 1.5rem;
   position: fixed;
@@ -27,13 +27,57 @@
   justify-content: space-between;
   cursor: pointer;
 }
+.show-menu .hamburguer {
+  right: 16rem;
+}
 
 .line {
   width: 100%;
   height: 0.1rem;
   background-color: #ffffff;
   box-shadow: 0.1rem 0.1rem 1px #000;
+  transition: transform 1s;
 }
+.show-menu #line1 {
+  transform: rotate(45deg) translate(0.3rem, 0.5rem);
+}
+
+.show-menu #line2 {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.show-menu #line3 {
+  transform: rotate(-45deg) translate(0.3rem, -0.5rem);
+}
+
+.hamburguer span {
+  position: absolute;
+  left: 3rem;
+  height: 2rem;
+  width: 6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #a044ff;
+  color: #fff;
+  font-family: var(__font-action);
+  opacity: 0;
+}
+.hamburguer span::before {
+  content: "";
+  position: absolute;
+  border-right: 0.5rem solid #a044ff;
+  border-top: 0.5rem solid transparent;
+  border-left: 0.5rem solid transparent;
+  border-bottom: 0.5rem solid transparent;
+  left: -1rem;
+}
+
+.show-menu .hamburguer:hover span {
+  opacity: 1;
+}
+
 header {
   width: 100%;
   height: 100vh;
@@ -151,6 +195,11 @@ header {
   background-color: #ffffff;
   position: fixed;
   top: 0;
+  right: -20rem;
+  transition: all 1s;
+}
+
+.show-menu .sidebar {
   right: 0;
 }
 
@@ -196,6 +245,7 @@ header {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  transition: color 1s;
 }
 .social-midia i:hover {
   color: #b98ed8;
