--- a/style.css
+++ b/style.css
@@ -163,19 +163,9 @@ header {
   animation: moveBanner 1s 0.9s forwards;
 }
 .banner button:hover {
-  background: #59c173; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #5d26c1,
-    #a17fe0,
-    #59c173
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #5d26c1,
-    #a17fe0,
-    #59c173
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #59c173;
+  background: -webkit-linear-gradient(to right, #5d26c1, #a17fe0, #59c173);
+  background: linear-gradient(to right, #5d26c1, #a17fe0, #59c173);
 }
 
 @keyframes moveBanner {
@@ -249,4 +239,165 @@ header {
 }
 .social-midia i:hover {
   color: #b98ed8;
+}
+
+.conhecimentos {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(6, 6rem);
+  row-gap: 0.5rem;
+}
+
+.conhecimento:nth-child(1) {
+  grid-column: 4/7;
+  grid-row: 1/3;
+}
+.conhecimento:nth-child(2) {
+  grid-column: 3/6;
+  grid-row: 3/5;
+}
+.conhecimento:nth-child(3) {
+  grid-column: 4/7;
+  grid-row: 5/-1;
+}
+.conhecimento:nth-child(4) {
+  grid-column: 11/14;
+  grid-row: 1/3;
+}
+.conhecimento:nth-child(5) {
+  grid-column: 12/15;
+  grid-row: 3/5;
+}
+.conhecimento:nth-child(6) {
+  grid-column: 11/14;
+  grid-row: 5/-1;
+}
+
+.sessao-conhecimentos {
+  background-color: #ebe8e8;
+}
+
+.sessao-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 2rem;
+}
+
+.sessao-header h1 {
+  font-family: var(__font-primary);
+  font-size: 3rem;
+  color: #4b4b4b;
+  border-bottom: solid 3px #a044ff;
+}
+
+.conhecimento-header {
+  display: flex;
+  align-items: center;
+}
+
+.conhecimento-header i {
+  font-size: 2.5rem;
+}
+
+.conhecimento-header h3 {
+  font-family: var(__font-secundary);
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+
+.conhecimento-text {
+  font-family: var(__font-secundary);
+  margin-top: 1rem;
+}
+
+.conhecimento-img-wrapper {
+  grid-column: 7/14;
+  grid-row: 3/6;
+  width: 100%;
+}
+
+.conhecimento-img-wrapper img {
+  object-fit: cover;
+  width: 50%;
+}
+
+.projetos {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.card {
+  width: 18rem;
+  height: 25rem;
+  position: relative;
+}
+
+.card-img-wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: #262626;
+  border-radius: 0.5rem;
+}
+.card-img-wrapper img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  opacity: 0.8;
+  transition: all 0.3s;
+}
+
+.card:hover .card-img-wrapper img {
+  opacity: 0.5;
+}
+
+.card-info {
+  position: absolute;
+  bottom: 0;
+  margin: 0 2rem;
+  text-shadow: 0.3rem 0.2rem 0.3rem rgba(160, 96, 96, 0.6);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 1s;
+}
+
+.card-info h2 {
+  font-size: var(__font-primary);
+  font-size: 2rem;
+  font-weight: 500;
+  color: #eee;
+}
+.card-info h3 {
+  font-family: var(__font-secundary);
+  font-weight: bolder;
+  color: #ff4081;
+  margin-bottom: 1.5rem;
+}
+.card-info p {
+  font-family: var(__font-secundary);
+  color: #eee;
+  font-weight: bolder;
+  width: 80%;
+  margin-bottom: 2rem;
+}
+
+.card-info button {
+  width: 8rem;
+  height: 2.5rem;
+  background-color: #6a3093;
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+  background: linear-gradient(to right, #a044ff, #6a3093);
+  font-family: var(__font-action);
+  font-size: 1rem;
+  color: #eee;
+  border-radius: 0.5rem;
+  border: none;
+  box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
+}
+
+.card:hover .card-info {
+  bottom: 2rem;
+  opacity: 1;
+  visibility: visible;
 }
