--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
   list-style: none;
   text-decoration: none;
 }
+body {
+  background-color: rgb(230, 230, 230);
+}
 
 .hamburguer {
   width: 2rem;
@@ -20,6 +23,7 @@
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
+  transition: all 1s;
 }
 .show-menu .hamburguer {
   right: 16rem;
@@ -30,10 +34,10 @@
   height: 0.1rem;
   background-color: #ffffff;
   box-shadow: 0.1rem 0.1rem 1px #000;
-  transition: transform 1s;
+  transition: all 1s;
 }
 .show-menu #line1 {
-  transform: rotate(45deg) translate(0.3rem, 0.5rem);
+  transform: rotate(45deg) translate(0.4rem, 0.5rem);
 }
 
 .show-menu #line2 {
@@ -133,33 +137,12 @@ header {
 }
 
 .banner button {
-  font-family: "Mulish", serif;
-  color: #ffffff;
-  text-transform: uppercase;
   font-weight: bolder;
   letter-spacing: 0.1rem;
-  background-color: #6a3093; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #a044ff,
-    #6a3093
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #a044ff,
-    #6a3093
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 1rem 3rem;
-  border: none;
-  border-radius: 5px;
   cursor: pointer;
   opacity: 0;
   animation: moveBanner 1s 0.9s forwards;
-}
-.banner button:hover {
-  background: #59c173;
-  background: -webkit-linear-gradient(to right, #5d26c1, #a17fe0, #59c173);
-  background: linear-gradient(to right, #5d26c1, #a17fe0, #59c173);
 }
 
 @keyframes moveBanner {
@@ -178,6 +161,7 @@ header {
   height: 100vh;
   background-color: #ffffff;
   position: fixed;
+  z-index: 1;
   top: 0;
   right: -20rem;
   transition: all 1s;
@@ -188,6 +172,7 @@ header {
 }
 
 .menu {
+  width: 100%;
   position: absolute;
   top: 40%;
   left: 50%;
@@ -197,17 +182,20 @@ header {
 .menu-item {
   text-align: center;
   margin-bottom: 0.5rem;
+  transition: all 1s;
+}
+.menu-item:hover {
+  background-color: #6a3093;
+}
+.menu-item:hover .menu-link {
+  color: #ffffff;
 }
 
 .menu-link {
   font-family: "Mulish", serif;
   font-size: 2rem;
   color: #555;
-  transition: color 1s;
-}
-
-.menu-link:hover {
-  color: #6a3093;
+  transition: all 1s;
 }
 
 .social-midia {
@@ -238,7 +226,7 @@ header {
 .conhecimentos {
   display: grid;
   grid-template-columns: repeat(16, 1fr);
-  grid-template-rows: repeat(6, 6rem);
+  grid-template-rows: repeat(8, 6rem);
   row-gap: 0.5rem;
 }
 
@@ -265,6 +253,24 @@ header {
 .conhecimento:nth-child(6) {
   grid-column: 11/14;
   grid-row: 5/-1;
+}
+.conhecimento:nth-child(7) {
+  grid-column: 12/15;
+  grid-row: 7/-1;
+}
+.conhecimento:nth-child(8) {
+  grid-column: 3/6;
+  grid-row: 7/-1;
+}
+
+.conhecimento:nth-child(9) {
+  grid-column: 4/7;
+  grid-row: 9/-1;
+}
+
+.conhecimento:nth-child(10) {
+  grid-column: 11/14;
+  grid-row: 9/-1;
 }
 
 .sessao-header {
@@ -304,6 +310,8 @@ header {
   font-family: "Josefin Slab", serif;
   margin-top: 1rem;
   color: #555;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .conhecimento-img-wrapper {
@@ -376,10 +384,8 @@ header {
   width: 80%;
   margin-bottom: 2rem;
 }
-
-.card-info button {
-  width: 8rem;
-  height: 2.5rem;
+.btn {
+  text-transform: uppercase;
   background-color: #6a3093;
   background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
   background: linear-gradient(to right, #a044ff, #6a3093);
@@ -390,9 +396,105 @@ header {
   border: none;
   box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
 }
+.btn:hover {
+  background: #59c173;
+  background: -webkit-linear-gradient(to right, #5d26c1, #a17fe0, #59c173);
+  background: linear-gradient(to right, #5d26c1, #a17fe0, #59c173);
+}
+
+.card-info button {
+  width: 8rem;
+  height: 2.5rem;
+}
 
 .card:hover .card-info {
   bottom: 2rem;
   opacity: 1;
   visibility: visible;
+}
+
+.sessao-contato {
+  width: 100%;
+  height: 100vh;
+  background-color: #555;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contato-wrapper {
+  width: 60%;
+  height: 30rem;
+  display: flex;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.5);
+}
+
+.contato-left {
+  width: 35%;
+  background-image: url(imagens/img-email.jpg);
+  background-size: cover;
+}
+
+.contato-rigth {
+  width: 65%;
+  background-color: #eee;
+  padding: 1rem 3rem 3rem 3rem;
+}
+
+.sessao-contato h1 {
+  width: 100%;
+  text-align: center;
+  font-family: "Josefin Slab", serif;
+  color: #262626;
+  font-size: 3rem;
+  font-weight: lighter;
+}
+
+.sessao-contato form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.input-group {
+  position: relative;
+}
+
+.field {
+  background: transparent;
+  border: none;
+  width: 20rem;
+  font-size: 1rem;
+  border-bottom: 1px dashed #000;
+  height: 3rem;
+  outline: none;
+  margin: 2rem 0;
+}
+.input-group textarea {
+  padding-top: 1rem;
+  max-width: 20rem;
+  max-height: 3rem;
+}
+
+.field-label {
+  position: absolute;
+  left: 0;
+  top: 2rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  transition: all 0.3s;
+}
+
+.field:focus ~ label {
+  top: 0;
+  font-size: 1rem;
+}
+
+.field:focus {
+  border-bottom: solid 1px;
+}
+
+.btn-submit {
+  width: 100%;
+  height: 2.5rem;
 }
