--- a/style.css
+++ b/style.css
@@ -498,3 +498,66 @@ header {
   width: 100%;
   height: 2.5rem;
 }
+
+.sessao-orcamento {
+  width: 100%;
+  height: 100vh;
+  background: url(imagens/img.price.jpg);
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.orcamento-wrapper {
+  position: relative;
+  width: 60%;
+  height: 60%;
+  background-color: #ffffff99;
+  border-radius: 10px;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+}
+
+.sessao-orcamento h1 {
+  position: absolute;
+  top: -2.5rem;
+  left: 2rem;
+  background-color: #6a3093;
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+  background: linear-gradient(to right, #a044ff, #6a3093);
+  padding: 0 3rem;
+  color: #fff;
+  font-size: 3rem;
+  font-weight: lighter;
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+
+.sessao-orcamento form {
+  margin: 4rem;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+
+.sessao-orcamento label {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.sessao-orcamento input[type="number"] {
+  font-size: 2rem;
+  width: 4rem;
+  outline: none;
+  border-radius: 10px;
+  border: none;
+  padding: 0.3rem;
+}
+
+.btn-orcamento {
+  text-transform: uppercase;
+  padding: 1rem;
+  cursor: pointer;
+  grid-column: 2;
+}
