--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@
 body {
   background-color: rgb(230, 230, 230);
 }
+html {
+  scroll-behavior: smooth;
+}
 
 .hamburguer {
   width: 2rem;
@@ -328,6 +331,8 @@ header {
 .projetos {
   display: flex;
   justify-content: space-evenly;
+  width: 100%;
+  height: 100vh;
 }
 
 .card {
@@ -560,4 +565,52 @@ header {
   padding: 1rem;
   cursor: pointer;
   grid-column: 2;
+}
+
+footer {
+  width: 100%;
+  height: 5rem;
+  background-color: #4b4b4b;
+  display: flex;
+  justify-content: center;
+
+  align-items: center;
+}
+
+.footer-content {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-content p {
+  color: #eee;
+  font-size: 1.2rem;
+}
+
+.social-list a {
+  margin: 0 2rem;
+  color: #ffffff;
+  font-size: 1.3rem;
+}
+
+.social-list ul {
+  display: flex;
+}
+
+#link-top {
+  position: fixed;
+  right: 3rem;
+  bottom: 3rem;
+  width: 3rem;
+  height: 3rem;
+  background-color: #6a3093;
+  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+  background: linear-gradient(to right, #a044ff, #6a3093);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  border-radius: 0.3rem;
+  box-shadow: 0 0.1rem 0.6rem #000;
 }
