--- a/style.css
+++ b/style.css
@@ -228,54 +228,50 @@ header {
 
 .conhecimentos {
   display: grid;
-  grid-template-columns: repeat(16, 1fr);
-  grid-template-rows: repeat(8, 6rem);
+  grid-template-columns: repeat(17, 1fr);
+  grid-template-rows: repeat(6, 6rem);
   row-gap: 0.5rem;
 }
-
+/* html */
 .conhecimento:nth-child(1) {
-  grid-column: 4/7;
+  grid-column: 2/5;
   grid-row: 1/3;
 }
+/* javascript */
 .conhecimento:nth-child(2) {
-  grid-column: 3/6;
-  grid-row: 3/5;
-}
-.conhecimento:nth-child(3) {
-  grid-column: 4/7;
-  grid-row: 5/-1;
-}
-.conhecimento:nth-child(4) {
-  grid-column: 11/14;
+  grid-column: 10/13;
   grid-row: 1/3;
 }
+/* css3 */
+.conhecimento:nth-child(3) {
+  grid-column: 6/9;
+  grid-row: 1/3;
+}
+/* bootstrap */
+.conhecimento:nth-child(4) {
+  grid-column: 14/17;
+  grid-row: 1/3;
+}
+/* git e github */
 .conhecimento:nth-child(5) {
-  grid-column: 12/15;
-  grid-row: 3/5;
+  grid-column: 2/5;
+  grid-row: 5/7;
 }
+/* react */
 .conhecimento:nth-child(6) {
-  grid-column: 11/14;
-  grid-row: 5/-1;
+  grid-column: 6/9;
+  grid-row: 5/7;
 }
+/* node */
 .conhecimento:nth-child(7) {
-  grid-column: 12/15;
-  grid-row: 7/-1;
+  grid-column: 10/13;
+  grid-row: 5/7;
 }
+/* npm */
 .conhecimento:nth-child(8) {
-  grid-column: 3/6;
-  grid-row: 7/-1;
+  grid-column: 14/17;
+  grid-row: 5/7;
 }
-
-.conhecimento:nth-child(9) {
-  grid-column: 4/7;
-  grid-row: 9/-1;
-}
-
-.conhecimento:nth-child(10) {
-  grid-column: 11/14;
-  grid-row: 9/-1;
-}
-
 .sessao-header {
   display: flex;
   align-items: center;
@@ -318,8 +314,8 @@ header {
 }
 
 .conhecimento-img-wrapper {
-  grid-column: 7/14;
-  grid-row: 3/6;
+  grid-column: 8/15;
+  grid-row: 3/8;
   width: 100%;
 }
 
@@ -421,7 +417,6 @@ header {
 .sessao-contato {
   width: 100%;
   height: 100vh;
-  background-color: #555;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -484,7 +479,7 @@ header {
 .field-label {
   position: absolute;
   left: 0;
-  top: 2rem;
+  top: 1rem;
   font-size: 1.2rem;
   text-transform: uppercase;
   transition: all 0.3s;
