--- a/style.css
+++ b/style.css
@@ -227,51 +227,44 @@ header {
 }
 
 .conhecimentos {
+  height: 100%;
   display: grid;
-  grid-template-columns: repeat(17, 1fr);
+  grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(6, 6rem);
   row-gap: 0.5rem;
 }
-/* html */
+
 .conhecimento:nth-child(1) {
-  grid-column: 2/5;
-  grid-row: 1/3;
+  grid-column: 4 / 7;
+  grid-row: 1 / 3;
 }
-/* javascript */
+
 .conhecimento:nth-child(2) {
-  grid-column: 10/13;
-  grid-row: 1/3;
+  grid-column: 3 / 6;
+  grid-row: 3 / 5;
 }
-/* css3 */
+
 .conhecimento:nth-child(3) {
-  grid-column: 6/9;
-  grid-row: 1/3;
+  grid-column: 4 / 7;
+  grid-row: 5 / -1;
 }
-/* bootstrap */
+
 .conhecimento:nth-child(4) {
-  grid-column: 14/17;
-  grid-row: 1/3;
+  grid-column: 11 / 14;
+  grid-row: 1 / 3;
 }
-/* git e github */
+
 .conhecimento:nth-child(5) {
-  grid-column: 2/5;
-  grid-row: 5/7;
+  grid-column: 12 / 15;
+  grid-row: 3 / 5;
 }
-/* react */
+
 .conhecimento:nth-child(6) {
-  grid-column: 6/9;
-  grid-row: 5/7;
-}
-/* node */
-.conhecimento:nth-child(7) {
-  grid-column: 10/13;
-  grid-row: 5/7;
+  grid-column: 11 / 14;
+  grid-row: 5 / -1;
 }
 /* npm */
-.conhecimento:nth-child(8) {
-  grid-column: 14/17;
-  grid-row: 5/7;
-}
+
 .sessao-header {
   display: flex;
   align-items: center;
@@ -608,4 +601,308 @@ footer {
   color: #fff;
   border-radius: 0.3rem;
   box-shadow: 0 0.1rem 0.6rem #000;
+}
+
+/*Responsividade Tablet*/
+
+@media (max-width: 600px) {
+  header {
+    height: 75vh;
+    width: 100vw;
+  }
+
+  section .conhecimentos-img-wrapper {
+    display: none;
+  }
+  section .conhecimentos {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(12, 7rem);
+    row-gap: 0.5rem;
+  }
+
+  .conhecimento:nth-child(1) {
+    grid-column: 2/11;
+    grid-row: 1/3;
+  }
+
+  .conhecimento:nth-child(2) {
+    grid-column: 2/11;
+    grid-row: 3/6;
+  }
+
+  .conhecimento:nth-child(3) {
+    grid-column: 2/11;
+    grid-row: 5/8;
+  }
+
+  .conhecimento:nth-child(4) {
+    grid-column: 2/11;
+    grid-row: 7/10;
+  }
+
+  .conhecimento:nth-child(5) {
+    grid-column: 2/11;
+    grid-row: 9/12;
+  }
+
+  .conhecimento:nth-child(6) {
+    grid-column: 2/11;
+    grid-row: 11/14;
+  }
+  .sessao-conhecimentos {
+    background-color: rgb(235, 235, 235);
+  }
+
+  .projetos {
+    width: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, fr);
+    grid-template-rows: repeat(3);
+  }
+  .card:nth-child(1) {
+    grid-column: 1/4;
+    width: 100%;
+    height: 15rem;
+  }
+  .card-info h2 {
+    font-size: 1.7rem;
+  }
+
+  .card:nth-child(2) {
+    grid-column: 1/4;
+    width: 100%;
+    height: 15rem;
+  }
+  .card:nth-child(3) {
+    grid-column: 1/4;
+    width: 100%;
+    height: 15rem;
+  }
+
+  .contato-left {
+    display: none;
+  }
+  .contato-right {
+    width: 100%;
+    border-radius: 5px;
+  }
+  .contato-wrapper {
+    width: 70%;
+    display: flex;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.5);
+  }
+
+  .orcamento-wrapper {
+    width: 90%;
+    height: 75%;
+    background: #ffffff99;
+    border-radius: 10px;
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
+    position: relative;
+  }
+
+  .sessao-orcamento {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer-content {
+    width: 90%;
+  }
+
+  .social-list a {
+    margin: 0 1rem;
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 300px) {
+  header {
+    width: 100vh;
+    height: 100vh;
+  }
+  .banner h1 {
+    width: 90%;
+    font-size: 4rem;
+    line-height: 3.7rem;
+  }
+  .sidebar {
+    height: 100%;
+  }
+  section .conhecimentos-img-wrapper {
+    display: none;
+  }
+  .sessao-conhecimentos {
+    width: 100vh;
+  }
+  section .conhecimentos {
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: 0.5rem;
+    text-align: justify;
+  }
+  .conhecimentos p {
+    line-height: 1rem;
+  }
+  .conhecimento:nth-child(1) {
+    grid-column: 2/8;
+    grid-row: 1/3;
+  }
+
+  .conhecimento:nth-child(2) {
+    grid-column: 2/8;
+    grid-row: 3/5;
+  }
+
+  .conhecimento:nth-child(3) {
+    grid-column: 2/8;
+    grid-row: 5/-1;
+  }
+
+  .conhecimento:nth-child(4) {
+    grid-column: 10/16;
+    grid-row: 1/3;
+  }
+
+  .conhecimento:nth-child(5) {
+    grid-column: 10/16;
+    grid-row: 3/5;
+  }
+
+  .conhecimento:nth-child(6) {
+    grid-column: 10/16;
+    grid-row: 5/-1;
+  }
+  .sessao-conhecimentos {
+    background-color: rgb(235, 235, 235);
+  }
+
+  .sessao-projetos h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .projetos {
+    width: 100vh;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4);
+    display: grid;
+  }
+
+  .card:nth-child(1) {
+    width: 90vh;
+    height: 25rem;
+    grid-column: 2/3;
+  }
+  .card:nth-child(2) {
+    width: 90vh;
+    height: 25rem;
+    grid-column: 2/3;
+    padding: 0;
+  }
+  .card:nth-child(3) {
+    width: 90vh;
+    height: 25rem;
+    grid-column: 2/3;
+    padding: 0;
+  }
+  .card-info {
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    visibility: hidden;
+    margin-top: 1rem;
+    padding-left: 1.5rem;
+    text-shadow: 0.3rem 0.2rem 0.3rem rgba(0, 0, 0, 0.4);
+    transition: all 0.3s;
+  }
+
+  .card-info h2 {
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    line-height: 2.3rem;
+    color: rgb(248, 248, 248);
+  }
+
+  .card-info h3 {
+    font-family: var(--font-action);
+    font-weight: bolder;
+    color: rgb(255, 67, 67);
+    margin-bottom: 1.5rem;
+  }
+
+  .card-info p {
+    font-family: var(--font-secondary);
+    color: #eee;
+    font-weight: 500;
+    width: 80%;
+    margin-bottom: 1rem;
+  }
+  #header-proj {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: auto;
+    border-bottom: none;
+    padding-left: 13rem;
+  }
+  .card-info {
+    font-size: 1.4rem;
+  }
+
+  .sessao-contato {
+    width: 100vh;
+    height: 100vh;
+  }
+  .contato-wrapper {
+    width: 90%;
+    height: 30rem;
+    display: flex;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.5);
+  }
+
+  .contato-left {
+    display: none;
+  }
+  /*Area do form*/
+  .contato-right {
+    width: 100%;
+    background-color: #eee;
+    padding: 1rem 3rem 3rem 3rem;
+    border-radius: 2%;
+  }
+  .sessao-orcamento {
+    width: 100vh;
+    height: 100vh;
+  }
+
+  .orcamento-wrapper {
+    height: 90%;
+    width: 80%;
+  }
+
+  .sessao-orcamento h1 {
+    font-size: 2.3rem;
+  }
+  .form-orc {
+    padding-top: 2rem;
+  }
+  footer {
+    width: 100vh;
+  }
+  .footer-content {
+    width: 90%;
+  }
+
+  .social-list a {
+    margin: 0 1rem;
+    font-size: 1.3rem;
+  }
 }
