--- a/style.css
+++ b/style.css
@@ -592,14 +592,12 @@ footer {
   bottom: 3rem;
   width: 3rem;
   height: 3rem;
-  background-color: #6a3093;
-  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
-  background: linear-gradient(to right, #a044ff, #6a3093);
+  background-color: rgba(94, 32, 136, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #fff;
   border-radius: 0.3rem;
+  color: #fff;
   box-shadow: 0 0.1rem 0.6rem #000;
 }
 
@@ -607,6 +605,9 @@ footer {
   header {
     height: 100vh;
     width: 100vw;
+  }
+  .banner h1 {
+    font-size: 2.8rem;
   }
   .conhecimento-img-wrapper img {
     display: none;
@@ -692,7 +693,7 @@ footer {
   }
   .contato-wrapper {
     width: 100%;
-    height: 85vh;
+    height: 100vh;
     box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.5);
     margin: 0;
     display: flex;
@@ -759,7 +760,7 @@ footer {
     height: 2.5rem;
   }
 
-  /* orcamento */
+  /* orcamento
   .sessao-orcamento {
     width: 100%;
     height: 100vh;
@@ -815,10 +816,15 @@ footer {
     padding: 1rem;
     cursor: pointer;
     grid-column: 2;
-  }
+  } */
 
   .footer-content {
     width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .footer-content p {
+    display: none;
   }
 
   .social-list a {
