--- a/style.css
+++ b/style.css
@@ -658,26 +658,52 @@ footer {
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(4, fr);
-    grid-template-rows: repeat(3);
+    grid-template-rows: repeat(8);
   }
   .card:nth-child(1) {
     grid-column: 1/4;
     width: 100%;
-    height: 15rem;
+    height: 13rem;
+    margin-bottom: 0.5rem;
   }
-  .card-info h2 {
-    font-size: 1.7rem;
-  }
-
   .card:nth-child(2) {
     grid-column: 1/4;
     width: 100%;
-    height: 15rem;
+    height: 13rem;
+    margin-bottom: 0.5rem;
   }
   .card:nth-child(3) {
     grid-column: 1/4;
     width: 100%;
-    height: 15rem;
+    height: 13rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .card:hover .card-info {
+    bottom: 1rem;
+  }
+
+  .card-info h2 {
+    font-size: 1.7rem;
+  }
+
+  .card-img-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: #262626;
+    border-radius: 0.5rem;
+  }
+  .card-img-wrapper img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+    opacity: 0.8;
+    transition: all 0.3s;
+  }
+
+  .card:hover .card-img-wrapper img {
+    opacity: 0.5;
   }
 
   /* contato */
