--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ header {
 }
 
 .conhecimento-img-wrapper {
-  grid-column: 8/15;
+  grid-column: 7/15;
   grid-row: 3/8;
   width: 100%;
 }
@@ -601,7 +601,62 @@ footer {
   box-shadow: 0 0.1rem 0.6rem #000;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1500px) {
+  section .conhecimentos {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(10, 7rem);
+    row-gap: 0.5rem;
+  }
+
+  .conhecimento:nth-child(1) {
+    grid-column: 2/6;
+    grid-row: 1/3;
+  }
+
+  .conhecimento:nth-child(2) {
+    grid-column: 7/11;
+    grid-row: 2/4;
+  }
+
+  .conhecimento:nth-child(3) {
+    grid-column: 2/6;
+    grid-row: 3/7;
+  }
+
+  .conhecimento:nth-child(4) {
+    grid-column: 7/11;
+    grid-row: 4/6;
+  }
+
+  .conhecimento:nth-child(5) {
+    grid-column: 2/6;
+    grid-row: 5/7;
+  }
+
+  .conhecimento:nth-child(6) {
+    grid-column: 7/11;
+    grid-row: 6/8;
+  }
+  .sessao-conhecimentos {
+    background-color: rgb(235, 235, 235);
+  }
+  .conhecimento-img-wrapper {
+    grid-column: 2/15;
+    grid-row: 9/8;
+    width: 100%;
+  }
+}
+@media (max-width: 800px) {
+  section .conhecimentos {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(9, 8rem);
+    row-gap: 0.5rem;
+  }
+}
+
+@media (max-width: 700px) {
   header {
     height: 100vh;
     width: 100vw;
