--- a/style.css
+++ b/style.css
@@ -294,8 +294,9 @@ header {
 .conhecimento-header h3 {
   font-family: "Josefin Slab", serif;
   font-size: 2rem;
+  font-weight: bold;
   padding-left: 1rem;
-  color: #555;
+  color: #a044ff;
 }
 
 .conhecimento-text {
@@ -841,64 +842,6 @@ footer {
     height: 2.5rem;
   }
 
-  /* orcamento
-  .sessao-orcamento {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .orcamento-wrapper {
-    width: 100%;
-    height: 75%;
-    background: #ffffff99;
-    border-radius: 10px;
-    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
-    position: relative;
-  }
-
-  .orcamento-wrapper h1 {
-    top: -90px;
-    left: 40px;
-    width: 50%;
-  }
-
-  .orcamento-wrapper form {
-    margin: 2rem;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    column-gap: 0rem;
-    row-gap: 4rem;
-  }
-
-  .sessao-orcamento label {
-    font-size: 1.3rem;
-    font-weight: bold;
-  }
-  .sessao-orcamento input[type="checkbox"] {
-    font-size: 2rem;
-    width: 4rem;
-  }
-
-  .sessao-orcamento input[type="number"] {
-    font-size: 2rem;
-    width: 4rem;
-    outline: none;
-    border-radius: 10px;
-    border: none;
-    padding: 0.3rem;
-  }
-
-  .btn-orcamento {
-    text-transform: uppercase;
-    padding: 1rem;
-    cursor: pointer;
-    grid-column: 2;
-  } */
-
   .footer-content {
     width: 90%;
     display: flex;
@@ -906,10 +849,5 @@ footer {
   }
   .footer-content p {
     display: none;
-  }
-
-  .social-list a {
-    margin: 0 1rem;
-    font-size: 1.3rem;
   }
 }
