--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@
   list-style: none;
   text-decoration: none;
 }
-body {
-  background-color: rgb(230, 230, 230);
-}
+
 html {
   scroll-behavior: smooth;
+  background-color: lightyellow;
 }
 
 .hamburguer {
@@ -119,8 +118,7 @@ header {
 .banner h1 {
   color: #ffffff;
   font-size: 3.5rem;
-  font-family: var(__font-primary);
-  font-weight: 200;
+  font-weight: 600;
   text-shadow: 0.3rem 0.4rem 2px rgba(0, 0, 0, 0.4);
   line-height: 3.5rem;
   margin-bottom: 2rem;
@@ -129,9 +127,9 @@ header {
 }
 
 .banner p {
-  font-family: var(__font-secundary);
-  color: #ffffff;
-  font-size: 2rem;
+  font-family: monospace, Verdana, Geneva, Tahoma, sans-serif;
+  color: #a17fe0;
+  font-size: 1.6rem;
   font-weight: bolder;
   text-shadow: 0.2rem 0.2rem rgba(0, 0, 0, 0.4);
   margin-bottom: 2rem;
@@ -204,7 +202,7 @@ header {
 .social-midia {
   background-color: #6a3093;
   position: absolute;
-  bottom: 2rem;
+  bottom: 5rem;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -225,9 +223,8 @@ header {
 .social-midia i:hover {
   color: #b98ed8;
 }
-
+/* conhecimentos### */
 .conhecimentos {
-  height: 100%;
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(6, 6rem);
@@ -318,11 +315,16 @@ header {
   width: 50%;
 }
 
+/* projetos### */
+
+.sessao-projetos {
+  height: 100vh;
+}
 .projetos {
   display: flex;
+  position: absolute;
   justify-content: space-evenly;
   width: 100%;
-  height: 100vh;
 }
 
 .card {
@@ -351,6 +353,13 @@ header {
 }
 
 .card-info {
+  color: #4b4b4b;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  background-color: #eee;
   position: absolute;
   bottom: 0;
   margin: 0 2rem;
@@ -364,17 +373,16 @@ header {
   font-size: "Baloo Da 2", serif;
   font-size: 2rem;
   font-weight: 500;
-  color: #eee;
+  margin: 1.5rem 0;
 }
 .card-info h3 {
   font-family: "Josefin Slab", serif;
   font-weight: bolder;
-  color: #a17fe0;
+  width: 80%;
   margin-bottom: 1.5rem;
 }
 .card-info p {
   font-family: "Josefin Slab", serif;
-  color: #eee;
   font-weight: bolder;
   width: 80%;
   margin-bottom: 2rem;
@@ -390,6 +398,7 @@ header {
   border-radius: 0.5rem;
   border: none;
   box-shadow: 0 0.1rem 0.8rem rgba(0, 0, 0, 0.4);
+  margin-bottom: 2rem;
 }
 .btn:hover {
   background: #59c173;
@@ -406,185 +415,6 @@ header {
   bottom: 2rem;
   opacity: 1;
   visibility: visible;
-}
-
-.sessao-contato {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.contato-wrapper {
-  width: 60%;
-  height: 30rem;
-  display: flex;
-  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.5);
-}
-
-.contato-left {
-  width: 35%;
-  background-image: url(imagens/img-email.jpg);
-  background-size: cover;
-}
-
-.contato-rigth {
-  width: 65%;
-  background-color: #eee;
-  padding: 1rem 3rem 3rem 3rem;
-}
-
-.sessao-contato h1 {
-  width: 100%;
-  text-align: center;
-  font-family: "Josefin Slab", serif;
-  color: #262626;
-  font-size: 3rem;
-  font-weight: lighter;
-}
-
-.sessao-contato form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.input-group {
-  position: relative;
-}
-
-.field {
-  background: transparent;
-  border: none;
-  width: 20rem;
-  font-size: 1rem;
-  border-bottom: 1px dashed #000;
-  height: 3rem;
-  outline: none;
-  margin: 2rem 0;
-}
-.input-group textarea {
-  padding-top: 1rem;
-  max-width: 20rem;
-  max-height: 3rem;
-}
-
-.field-label {
-  position: absolute;
-  left: 0;
-  top: 1rem;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  transition: all 0.3s;
-}
-
-.field:focus ~ label {
-  top: 0;
-  font-size: 1rem;
-}
-
-.field:focus {
-  border-bottom: solid 1px;
-}
-
-.btn-submit {
-  width: 100%;
-  height: 2.5rem;
-}
-
-.sessao-orcamento {
-  width: 100%;
-  height: 100vh;
-  background: url(imagens/img.price.jpg);
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.orcamento-wrapper {
-  position: relative;
-  width: 60%;
-  height: 60%;
-  background-color: #ffffff99;
-  border-radius: 10px;
-  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
-}
-
-.sessao-orcamento h1 {
-  position: absolute;
-  top: -2.5rem;
-  left: 2rem;
-  background-color: #6a3093;
-  background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
-  background: linear-gradient(to right, #a044ff, #6a3093);
-  padding: 0 3rem;
-  color: #fff;
-  font-size: 3rem;
-  font-weight: lighter;
-  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
-}
-
-.sessao-orcamento form {
-  margin: 4rem;
-  display: grid;
-  grid-template-columns: auto 1fr;
-  column-gap: 2rem;
-  row-gap: 2rem;
-}
-
-.sessao-orcamento label {
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.sessao-orcamento input[type="number"] {
-  font-size: 2rem;
-  width: 4rem;
-  outline: none;
-  border-radius: 10px;
-  border: none;
-  padding: 0.3rem;
-}
-
-.btn-orcamento {
-  text-transform: uppercase;
-  padding: 1rem;
-  cursor: pointer;
-  grid-column: 2;
-}
-
-footer {
-  width: 100%;
-  height: 5rem;
-  background-color: #4b4b4b;
-  display: flex;
-  justify-content: center;
-
-  align-items: center;
-}
-
-.footer-content {
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer-content p {
-  color: #eee;
-  font-size: 1.2rem;
-}
-
-.social-list a {
-  margin: 0 2rem;
-  color: #ffffff;
-  font-size: 1.3rem;
-}
-
-.social-list ul {
-  display: flex;
 }
 
 #link-top {
@@ -639,9 +469,7 @@ footer {
     grid-column: 7/11;
     grid-row: 6/8;
   }
-  .sessao-conhecimentos {
-    background-color: rgb(235, 235, 235);
-  }
+
   .conhecimento-img-wrapper {
     grid-column: 2/15;
     grid-row: 9/8;
@@ -665,6 +493,8 @@ footer {
   .banner h1 {
     font-size: 2.8rem;
   }
+
+  /* conhecimento mobile */
   .conhecimento-img-wrapper img {
     display: none;
   }
@@ -705,9 +535,8 @@ footer {
     grid-column: 2/11;
     grid-row: 11/14;
   }
-  .sessao-conhecimentos {
-    background-color: rgb(235, 235, 235);
-  }
+
+  /* projetos mobile */
 
   .projetos {
     width: 100%;
@@ -760,94 +589,5 @@ footer {
 
   .card:hover .card-img-wrapper img {
     opacity: 0.5;
-  }
-
-  /* contato */
-
-  .contato-left {
-    width: 100%;
-    height: 100%;
-  }
-  .contato-rigth {
-    width: 100%;
-    border-radius: 5px;
-    padding: 0;
-  }
-  .contato-wrapper {
-    width: 100%;
-    height: 100vh;
-    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.5);
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-  }
-  .sessao-contato h1 {
-    width: 100%;
-    text-align: center;
-    font-family: "Josefin Slab", serif;
-    color: #262626;
-    font-size: 3rem;
-    font-weight: lighter;
-  }
-  .sessao-contato {
-    height: 100vh;
-  }
-
-  .sessao-contato form {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .input-group {
-    position: relative;
-  }
-
-  .field {
-    background: transparent;
-    border: none;
-    width: 20rem;
-    font-size: 1rem;
-    border-bottom: 1px dashed #000;
-    height: 3rem;
-    outline: none;
-    margin: 2rem 0;
-  }
-  .input-group textarea {
-    padding-top: 1rem;
-    max-width: 20rem;
-    max-height: 3rem;
-  }
-
-  .field-label {
-    position: absolute;
-    left: 0;
-    top: 1rem;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    transition: all 0.3s;
-  }
-
-  .field:focus ~ label {
-    top: 2;
-    font-size: 1.6rem;
-  }
-
-  .field:focus {
-    border-bottom: solid 1px;
-  }
-
-  .btn-submit {
-    width: 50%;
-    height: 2.5rem;
-  }
-
-  .footer-content {
-    width: 90%;
-    display: flex;
-    justify-content: space-evenly;
-  }
-  .footer-content p {
-    display: none;
   }
 }
