--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ header {
   height: 30rem;
   background-color: #ffffff;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   top: 0;
   left: 0rem;
   transition: all 1s;
@@ -175,14 +175,13 @@ header {
 
 .container-sobre {
   position: absolute;
-  padding: 2rem;
-  width: 60%;
-  top: 40%;
-  left: 50%;
+  width: 50%;
+  top: 41%;
+  left: 40%;
   transform: translate(-65%, -45%);
   display: flex;
   flex-direction: column;
-  text-align: center;
+  text-align: start;
   transition: all 1s;
 }
 
@@ -195,7 +194,7 @@ header {
   color: #5d26c1;
 }
 .sidebar-sobre .text {
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: #262626;
 }
 .container-sobre i {
@@ -364,6 +363,16 @@ header {
 
 /* projetos### */
 
+.container-project-title {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.container-project-title i {
+  padding: 0 1rem;
+  font-size: 1.5rem;
+  color: #6a3093;
+}
 .sessao-projetos {
   height: 100vh;
 }
