--- a/style.css
+++ b/style.css
@@ -145,6 +145,18 @@ header {
   opacity: 0;
   animation: moveBanner 1s 0.9s forwards;
 }
+.banner .icon-whatsapp {
+  font-size: 2.5rem;
+  color: #97d343;
+  margin-bottom: 2rem;
+  opacity: 0;
+  animation: moveBanner 1s 0.5s forwards;
+}
+.banner .container-contact {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
 @keyframes moveBanner {
   0% {
